# dcmReader

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yaml  pylint.yml
src/dcmReader/: __init__.py  __main__.py  dcmReader.py  dcm_characteristic_line.py  dcm_characteristic_map.py  dcm_distribution.py  dcm_fixed_characteristic_line.py  dcm_fixed_characteristic_map.py  dcm_function.py  dcm_group_characteristic_line.py  dcm_group_characteristic_map.py  dcm_parameter.py  dcm_parameter_block.py  dcm_reader.py  elements.py  utils.py
tests/: Sample.dcm  Tests.py  test_dcmreader.py
