[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120

[tool.pylint.message_control]
max-attributes=15
max-line-length=120
max-branches=15
max-locals=26
max-nested-blocks=6
disable = [
    "too-many-branches",
    "too-many-statements",
    "duplicate-code",
    "invalid-name",
]