[metadata]
name = dcmReader
version = 0.1.1
author = Dominic Kuschmierz
author_email = dominic@kuschmierz.org
description = Parser for the DCM (Data Conservation format) format used by e.g. Vector, ETAS,...
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dkuschmierz/dcmReader
project_urls =
    Bug Tracker = https://github.com/dkuschmierz/dcmReader/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Information Analysis

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src