[metadata]
name = dcmReader
version = 0.4.0
author = Dominic Kuschmierz
author_email = dominic@kuschmierz.org
description = Parser for the DCM (Data Conservation format) format used by e.g. Vector, ETAS,...
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dkuschmierz/dcmReader
project_urls =
    Bug Tracker = https://github.com/dkuschmierz/dcmReader/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Information Analysis

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy >= 1.21

[options.packages.find]
where = src

[flake8]
ignore =
    # E203: whitespace before ':' - doesn't work well with black
    # E402: module level import not at top of file
    # E501: line too long - let black worry about that
    # E731: do not assign a lambda expression, use a def
    # W503: line break before binary operator
    E203, E402, E501, E731, W503
exclude =
    .eggs
    doc
builtins =
    ellipsis

[isort]
profile = black
skip_gitignore = true
float_to_top = true
default_section = THIRDPARTY
known_first_party = dcmReader
